--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Context":  "Server=localhost; Port 5432; database=stroll; UserId=postgres; Password=1q2w3e4r"
+  }
 }
