--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Context":  "Server=localhost; Port 5432; database=stroll; UserId=postgres; Password=1q2w3e4r"
+    "Context":  "Server=localhost; Port=5432; database=stroll; UserId=postgres; Password=1q2w3e4r"
   }
 }
