--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "3059e0ba-7b5a-4d74-848f-bfb4c4c5f0e3"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Context":  "Server=localhost; Port=5432; database=stroll; UserId=postgres; Password=1q2w3e4r"
+    "Context": "Server=localhost; Port=5432; database=stroll; UserId=postgres; Password=1q2w3e4r"
   }
 }
